test/Execute/SyntaxErrorTest/while_empty_condition.typh
while () {
    print("never")
}


"""stderr
syntax error: $FILE:1:1
  unknown tokens

    1 |  while () {
    2 |      print("never")
    3 |  }

syntax error: $FILE:3:2
  unknown tokens

    3 |  }
    4 |  
    5 |  
    ...
"""
